--- a/apps/dash-medical-provider-charges/assets/clinical-analytics.css
+++ b/apps/dash-medical-provider-charges/assets/clinical-analytics.css
@@ -100,6 +100,10 @@ span.Select-clear-zone {
     height: 6000px;
 }
 
+#geo-map-loading-outer {
+    height: 55rem;
+}
+
 #geo-map {
     height: 50rem;
 }
