--- a/apps/dash-oil-gas-ternary/assets/oil-and-gas-ternary.css
+++ b/apps/dash-oil-gas-ternary/assets/oil-and-gas-ternary.css
@@ -19,7 +19,7 @@
     padding: 0 5rem;
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: center;
 }
 
 /* Top-row-header
@@ -36,7 +36,7 @@
     font-size: 4rem;
     font-weight: 800;
     text-transform: uppercase;
-    line-height: 4rem;
+    line-height: normal;
     width: 35rem;
     color: white;
 }
@@ -108,7 +108,7 @@
 /* Top-row-graphs
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 #top-row-graphs{
-    padding: 5rem 0;
+    padding: 10rem 0 5rem 0;
 }
 
 #well-map-container{
