--- a/apps/dash-live-model-training/assets/base.css
+++ b/apps/dash-live-model-training/assets/base.css
@@ -62,7 +62,7 @@ Development: https://rawgit.com/xhlulu/0acba79000a3fd1e6f552ed82edb8a64/raw/dash
   background-color: white;
   border-radius: 2px 2px 5px 5px;
   font-size: 1.5rem;
-  border: thin solid rgb(240, 240, 240);
+  /* border: thin solid rgb(240, 240, 240); */
   margin-left: auto;
   margin-right: auto;
   color: #302f54;
@@ -265,7 +265,7 @@ h5 {
   margin-top: 0.6rem;
 }
 h6 {
-  font-size: 2rem;
+  font-size: 1.75rem;
   line-height: 1.6;
   letter-spacing: 0;
   margin-bottom: 0.75rem;
