--- a/apps/dash-tsne/assets/styles.css
+++ b/apps/dash-tsne/assets/styles.css
@@ -142,7 +142,7 @@ body {
 @media only screen and (max-width: 550px) {
   .columns {
     float: none;
-    width: 70%;
+    width: 90%;
   }
 
   .three.columns {
@@ -164,5 +164,10 @@ body {
     float: none !important;
     text-align: center !important;
     margin: 10px 15px;
+  }
+
+  #scene > canvas {
+    min-width: 100%;
+    height: 650px;
   }
 }
