--- a/apps/dash-svm/assets/custom-styles.css
+++ b/apps/dash-svm/assets/custom-styles.css
@@ -15,8 +15,8 @@
     padding: 3rem 0;
     width: 100%;
     margin-bottom: 6% !important;
-    display: block;
-    overflow: hidden;
+    /*display: block;*/
+    /*overflow: hidden;*/
 }
 
 .banner h2 {
