--- a/apps/dash-medical-provider-charges/assets/clinical-analytics.css
+++ b/apps/dash-medical-provider-charges/assets/clinical-analytics.css
@@ -27,7 +27,7 @@ body {
 .banner h6 {
     font-family: 'Open Sans', sans-serif;
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: 600;
     line-height: 1;
     text-transform: uppercase;
 }
@@ -149,6 +149,16 @@ span.Select-clear-zone {
   ##Device = Most of the Smartphones Mobiles (Portrait)
   */
 
+@media only screen and (max-width: 750px) {
+    .control-row-1 {
+        flex-direction: column;
+    }
+
+    #state-select-outer, #select-metric-outer {
+        width: 100%;
+    }
+}
+
 @media only screen and (max-width: 750px), (min-width: 768px) and (max-width: 1024px) {
     body {
         font-size: 14px;
@@ -174,19 +184,14 @@ span.Select-clear-zone {
         margin: 1rem;
     }
 
-    .control-row-1 {
-        flex-direction: column;
+    #upper-left > div > label {
+        font-weight: normal;
+        margin-bottom: 2px;
     }
 
     #upper-left, #geo-map-outer {
         width: 100%;
         margin-left: 0;
-        padding: 1rem;
-    }
-
-    #state-select-outer, #select-metric-outer {
-        width: 100%;
-        margin: 1rem 0rem;
     }
 }
 
@@ -197,6 +202,10 @@ span.Select-clear-zone {
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 
     #upper-left, #geo-map-outer {
-    padding: 0rem 4rem;
+        padding: 1rem 4rem;
+    }
+
+    #state-select-outer, #select-metric-outer {
+        width: 45%;
     }
 }
